    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
22-May-2003
Problems fixed:
    1. bug #722788: WebForm.submit() was not invoking the 'onClick' event of the specified submit button.
    2. bug #734133: javascript: URLs were ignored if "javascript:" is not all lower case.

 2-May-2003
Acknowledgements:
    Thanks to David D. Kilzer for creating thorough tests for URLs containing navigation and showing a way to handle them.
Additions:
    1. JUnitServlet now supports a value of 'xml' for the format parameter, generating a format compatible with
       ant's XMLResultFormatter
    2. Form.getOptions() now works for radio buttons and checkboxes - as long as the desired name is located after the control.
Problems fixed:
    1. bug #717280: URLs with "../" in them were not resolved properly
    2. bug #717640: <base> element was not being handled in the case when no host was specified.
    3. When setting a selection control, HttpUnit would always select a value matching its first option if possible,
       rather than taking the first valid value.

 4-Apr-2003 1.5.3
Acknowledgements:
    Thanks to Andrew Bickerton for:
          correcting the handling of document.open for non-HTML pages and new pages with base tags,
          correcting the document.write append problem,
          identifying the javascript parent frame update problem and suggesting a fix, and
          showing how to handle responses with content-length 0.
    Thanks to Brendan Boesen for:
          adding a method to access session IDs in ServletUnitContext, and
          correcting the session invalidation problem.