@@ -13,6 +13,13 @@ Limitations:
 
 
 Revision History:
+23-May-2002
+Problems fixed:
+    1. bug #721989: scripts did not see id attributes of form controls.
+    2. bug #741965: cookies with explicit domain attributes are being rejected when their host is of the form HD
+                    where D is the explicit domain attribute and H contains a dot. Apparently, most browsers ignore this
+                    rule. Now, so does HttpUnit.
+
 22-May-2003
 Problems fixed:
     1. bug #722788: WebForm.submit() was not invoking the 'onClick' event of the specified submit button.
